# haskell-candid

./: .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  Codec-Candid-TestExports.html  Codec-Candid-Tuples.html  Codec-Candid.html  LICENSE  README.md  WORKSPACE.bazel  cabal.project  candid.cabal  candid.haddock  cmdline.hs  default.nix  doc-index.html  doc-index.json  doctests.hs  haskell-candid.cabal  hcandid.hs  index.html  result  test.hs
.github/workflows/: bazel.yml  bump.yml  test.yml
ci-configs/: ghc-8.10.7.config  ghc-9.0.2.config  ghc-9.10.1.config  ghc-9.12.1.config  ghc-9.2.4.config  ghc-9.2.5.config  ghc-9.4.4.config  ghc-9.6.1.config  ghc-9.6.3.config  ghc-9.8.1.config  stackage-20.5.config  stackage-20.config  stackage-21.6.config  stackage-21.config  stackage-22.config  stackage-nightly.config  upper-bounds.config  upper-bounds.disabled
plans/: plan-ghc-8.10.7.json  plan-ghc-9.0.2.json  plan-ghc-9.2.4.json  plan-ghc-9.2.5.json  plan-ghc-9.4.4.json  plan-stackage-20.5.json  plan-stackage-nightly.json
src/: Codec.Candid.Class.html  Codec.Candid.Coerce.html  Codec.Candid.Data.html  Codec.Candid.Decode.html  Codec.Candid.Encode.html  Codec.Candid.EncodeTextual.html  Codec.Candid.FieldName.html  Codec.Candid.Generic.html  Codec.Candid.Hash.html  Codec.Candid.Infer.html  Codec.Candid.Parse.html  Codec.Candid.Service.html  Codec.Candid.Subtype.html  Codec.Candid.TH.html  Codec.Candid.TestExports.html  Codec.Candid.Tuples.html  Codec.Candid.TypTable.html  Codec.Candid.Types.html  Codec.Candid.html
src/Codec/: Candid.hs
src/Codec/Candid/: Class.hs  Coerce.hs  Core.hs  Data.hs  Decode.hs  Encode.hs  EncodeTextual.hs  FieldName.hs  Generic.hs  Hash.hs  Infer.hs  Parse.hs  Row.hs  Service.hs  ServiceT.hs  Subtype.hs  TH.hs  TestExports.hs  Tuples.hs  TypTable.hs  Types.hs  Values.hs  Wrappers.hs
test/: SpecTests.hs  THTests.hs  Tests.hs  test.hs
