load("@rules_haskell//haskell:defs.bzl", "haskell_library")
haskell_library(
    name = "candid",
    srcs = glob(["src/**/*.hs"]),
    src_strip_prefix = "src",
    extra_srcs = ["words.txt"],
    deps = [
        "@stackage//:base",
        "@stackage//:digest",
        "@stackage//:text",
        "@stackage//:dlist",
        "@stackage//:vector",
        "@stackage//:bytestring",
        "@stackage//:mtl",
        "@stackage//:transformers",
        "@stackage//:hex-text",
        "@stackage//:megaparsec",
        "@stackage//:parser-combinators",
        "@stackage//:scientific",
        "@stackage//:cereal",
        "@stackage//:leb128-cereal",
        "@stackage//:containers",
        "@stackage//:unordered-containers",
        "@stackage//:row-types",
        "@stackage//:constraints",
        "@stackage//:prettyprinter",
        "@stackage//:template-haskell",
        "@stackage//:base32",
        "@stackage//:split",
        "@stackage//:file-embed",
    ],
    visibility = ["//visibility:public"],
)
