cabal-version:       >=1.10
name:                candid
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Codec.Candid
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  build-depends:       text
  build-depends:       vector
  build-depends:       bytestring
  build-depends:       mtl
  build-depends:       hex-text
  build-depends:       cereal
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base >= 4 && < 5
  build-depends: tasty >= 0.7
  build-depends: tasty-hunit
  build-depends: tasty-smallcheck
  build-depends: smallcheck
  build-depends: candid
  build-depends: bytestring
  build-depends: text
  build-depends: vector
