cabal-version:       >=1.10
name:                candid
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
license:             Apache
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Codec.Candid
  exposed-modules: Codec.Candid.Tuples
  other-modules: Codec.Candid.Core
  other-modules: Codec.Candid.Wrappers
  other-modules: Codec.Candid.Generic
  other-modules: Codec.Candid.Service
  build-depends: base >=4.12 && <5
  build-depends: text
  build-depends: vector
  build-depends: bytestring
  build-depends: mtl
  build-depends: hex-text
  build-depends: cereal
  build-depends: leb128-cereal
  build-depends: containers
  build-depends: unordered-containers
  build-depends: row-types == 0.3.*
  build-depends: prettyprinter
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base >= 4 && < 5
  build-depends: tasty >= 0.7
  build-depends: tasty-hunit
  build-depends: tasty-smallcheck
  build-depends: smallcheck
  build-depends: candid
  build-depends: bytestring
  build-depends: text
  build-depends: vector
  build-depends: prettyprinter
  ghc-options: -rtsopts

test-suite doctest
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: base, candid, doctest >= 0.8
  build-depends: row-types == 0.3.*
  build-depends: leb128-cereal
  build-depends: prettyprinter
