cabal-version:       >=1.10
name:                candid
version:             0.1
-- synopsis:
-- description:
-- bug-reports:
license:             Apache
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Codec.Candid
  exposed-modules: Codec.Candid.Tuples
  other-modules: Codec.Candid.Class
  other-modules: Codec.Candid.Generic
  other-modules: Codec.Candid.Service
  other-modules: Codec.Candid.Parse
  other-modules: Codec.Candid.TH
  other-modules: Codec.Candid.Data
  other-modules: Codec.Candid.Types
  other-modules: Codec.Candid.FieldName
  other-modules: Codec.Candid.TypTable
  other-modules: Codec.Candid.Decode
  other-modules: Codec.Candid.EncodeTextual
  other-modules: Codec.Candid.Encode
  other-modules: Codec.Candid.Infer
  build-depends: base >=4.12 && <5
  build-depends: text
  build-depends: dlist
  build-depends: vector
  build-depends: bytestring
  build-depends: mtl
  build-depends: hex-text
  build-depends: crc
  build-depends: megaparsec >= 8
  build-depends: scientific
  build-depends: cereal
  build-depends: leb128-cereal
  build-depends: containers
  build-depends: unordered-containers
  build-depends: row-types == 0.3.*
  build-depends: prettyprinter
  build-depends: template-haskell
  build-depends: base32
  build-depends: split
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

executable hcandid
  default-language: Haskell2010
  main-is: hcandid.hs
  build-depends: base >= 4 && < 5
  build-depends: candid
  build-depends: optparse-applicative
  build-depends: text
  build-depends: bytestring
  build-depends: hex-text
  build-depends: prettyprinter
  ghc-options: -Wall -Wno-name-shadowing

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  build-depends: base >= 4 && < 5
  build-depends: tasty >= 0.7
  build-depends: tasty-hunit
  build-depends: tasty-smallcheck
  build-depends: tasty-rerun
  -- restrict smallcheck to a version that does not yet have the instance for Void
  build-depends: smallcheck < 1.2.0
  build-depends: candid
  build-depends: bytestring
  build-depends: text
  build-depends: vector
  build-depends: prettyprinter
  build-depends: unordered-containers
  build-depends: row-types == 0.3.*
  ghc-options: -rtsopts

test-suite doctest
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       doctests.hs
  build-depends: base, candid, doctest >= 0.8
  build-depends: row-types == 0.3.*
  build-depends: leb128-cereal
  build-depends: prettyprinter
